--- a/testosterone-guide.html
+++ b/testosterone-guide.html
@@ -104,8 +104,8 @@
 
     <h2>How to Naturally Boost Testosterone</h2>
     <p>Optimizing testosterone naturally involves a holistic approach focusing on diet, exercise, sleep, and stress management. Strength training, particularly heavy compound lifts like squats and deadlifts, promotes testosterone production. Adequate sleep (7–9 hours) is essential as testosterone peaks during deep REM sleep. A balanced diet rich in healthy fats, protein, and micronutrients supports hormone synthesis. Managing stress is vital because chronic stress raises cortisol, which suppresses testosterone. Natural supplements can also aid; for example, Vitamin D and Zinc are well-known for their hormone-boosting effects.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B00EZSUVHK?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Vitamin D Supplements</a>
-    <a class="btn" href="https://www.amazon.com/dp/B002WUAQWU?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Zinc Supplements</a>
+    <a class="btn" href="https://www.amazon.com/Biotest-High-Absorption-Vitamin-5000/dp/B0CRZRLCFW/ref=sr_1_6_pp?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Vitamin D Supplements</a>
+    <a class="btn" href="https://www.amazon.com/Jarrow-Formulas-Supports-Antioxidant-Protection/dp/B0001VKDDM/ref=sr_1_6_pp?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Zinc Supplements</a>
 
     <h2>Role of Diet in Testosterone Health</h2>
     <p>Your diet directly affects testosterone levels. Nutrients like zinc, magnesium, and vitamin D are crucial for hormone production. Consuming healthy fats—such as those found in eggs, avocados, and nuts—supports the building blocks of testosterone. Avoid processed foods and excessive sugar, as they can increase inflammation and insulin resistance, both harmful to hormone balance. Hydration also plays a role in maintaining energy and metabolic function, which indirectly supports testosterone.</p>
