--- a/index.html
+++ b/index.html
@@ -3,90 +3,131 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TestoFit | Natural Testosterone & Fitness</title>
+  <title>TestoFit - Testosterone, Fitness & Health</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      background-color: #e8f5f2;
-      color: #222;
+      background-color: #f4f4f4;
+      color: #333;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     header {
-      background: linear-gradient(135deg, #00b894, #019875);
+      background-color: #111;
       color: white;
-      padding: 1.5rem 1rem;
+      padding: 1rem;
       text-align: center;
-      box-shadow: 0 4px 8px rgba(0,184,148,0.4);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
     nav a {
       color: white;
-      margin: 0 18px;
+      margin: 0 15px;
       text-decoration: none;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 6px 14px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
-      display: inline-block;
+      font-weight: 600;
     }
     nav a:hover {
-      background-color: rgba(255, 255, 255, 0.25);
-    }
-    main {
-      max-width: 820px;
-      margin: 2.5rem auto 4rem;
-      padding: 2.5rem 3rem;
-      background: white;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-      line-height: 1.6;
-    }
-    h1 {
-      font-weight: 900;
-      font-size: 2.8rem;
-      margin-top: 0;
-      color: #01684b;
-    }
-    h2 {
-      margin-top: 2.8rem;
-      font-weight: 700;
-      font-size: 1.6rem;
-      border-bottom: 3px solid #00b894;
-      padding-bottom: 0.35rem;
-      color: #017a55;
-    }
-    ul {
-      padding-left: 1.4rem;
-    }
-    ul li {
-      margin-bottom: 0.75rem;
-      font-size: 1.05rem;
-    }
-    a.article-link {
-      color: #019875;
-      text-decoration: none;
-      font-weight: 700;
-      transition: color 0.3s ease;
-    }
-    a.article-link:hover {
-      color: #00865a;
       text-decoration: underline;
     }
-    footer {
-      margin-top: 4rem;
-      padding: 1.2rem 0;
-      background-color: #d9ede9;
-      border-top: 1px solid #a7d4c8;
-      color: #01684b;
-      font-size: 0.95rem;
-      text-align: center;
-      font-style: italic;
-      font-weight: 600;
-      letter-spacing: 0.02em;
+    main {
+      flex: 1;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
     }
-    footer p {
-      margin: 0.4rem 0;
+    .intro {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .intro h1 {
+      font-weight: 800;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: #00b894;
+    }
+    .intro p {
+      font-size: 1.2rem;
+      line-height: 1.5;
+      color: #444;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    .articles-section {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+      gap: 1.5rem;
+      margin-bottom: 3rem;
+    }
+    .article-card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.08);
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      transition: box-shadow 0.3s ease;
+    }
+    .article-card:hover {
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+    }
+    .article-card h2 {
+      font-size: 1.3rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      color: #111;
+    }
+    .article-card p {
+      flex-grow: 1;
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 1.25rem;
+      line-height: 1.4;
+    }
+    .article-card a.btn {
+      align-self: flex-start;
+      background-color: #00b894;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 0.9rem;
+      transition: background-color 0.2s ease;
+    }
+    .article-card a.btn:hover {
+      background-color: #019875;
+    }
+    .more-articles {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .more-articles a {
+      color: #00b894;
+      font-weight: 600;
+      text-decoration: none;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.3s ease;
+      font-size: 1.1rem;
+    }
+    .more-articles a:hover {
+      border-color: #00b894;
+    }
+    footer {
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
+      text-align: center;
     }
   </style>
 </head>
@@ -102,26 +143,37 @@
   </header>
 
   <main>
-    <h1>Welcome to TestoFit</h1>
-    <p>Your trusted resource for natural testosterone optimization, fitness, and overall health. Learn, grow, and take action on improving your body and mind.</p>
+    <section class="intro">
+      <h1>Optimize Your Testosterone & Fitness</h1>
+      <p>Welcome to TestoFit — your go-to source for science-backed tips, workout routines, nutrition guides, and product recommendations to naturally boost testosterone and improve your overall health and performance.</p>
+    </section>
 
-    <h2>Featured Articles</h2>
-    <ul>
-      <li><a class="article-link" href="foods-that-boost-testosterone.html">Top 5 Foods That Boost Testosterone</a></li>
-      <li><a class="article-link" href="fitness-routine-for-men.html">The Ultimate Fitness Routine for Men</a></li>
-      <li><a class="article-link" href="testosterone-guide.html">Beginner's Guide to Testosterone</a></li>
-    </ul>
+    <section class="articles-section" aria-label="Featured Articles">
+      <article class="article-card">
+        <h2>Fitness Routine for Men</h2>
+        <p>Discover a comprehensive 7-day workout plan designed to maximize testosterone levels, build muscle, and improve energy. Includes detailed exercises and tips to get the most from your training.</p>
+        <a href="fitness-routine-for-men.html" class="btn">Read More</a>
+      </article>
 
-    <h2>More Articles</h2>
-    <ul>
-      <li><a class="article-link" href="about.html">About TestoFit</a></li>
-      <li><a class="article-link" href="articles.html">All Articles</a></li>
-      <li><a class="article-link" href="contact.html">Contact Us</a></li>
-    </ul>
+      <article class="article-card">
+        <h2>Top 5 Foods That Boost Testosterone</h2>
+        <p>Learn about five powerful foods that support testosterone production naturally, including the science behind each and direct links to trusted products.</p>
+        <a href="foods-that-boost-testosterone.html" class="btn">Read More</a>
+      </article>
+
+      <article class="article-card">
+        <h2>The Ultimate Testosterone Guide</h2>
+        <p>A deep dive into testosterone’s role in your health, how to optimize it through lifestyle, supplements, and more, plus product recommendations to get started today.</p>
+        <a href="testosterone-guide.html" class="btn">Read More</a>
+      </article>
+    </section>
+
+    <div class="more-articles">
+      <a href="articles.html">Explore More Articles &rarr;</a>
+    </div>
   </main>
 
   <footer>
-    <p>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
