--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Articles - TestoFit</title>
+  <title>Articles | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -36,31 +36,39 @@
       box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
     h1 {
-      margin-top: 0;
       font-weight: 800;
-      font-size: 2.2rem;
-    }
-    .article-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.5rem;
-    }
-    .card {
-      background-color: #fdfdfd;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1.2rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-    }
-    .card h3 {
+      font-size: 2rem;
       margin-top: 0;
+      margin-bottom: 1.5rem;
+      text-align: center;
+      color: #00796B;
     }
-    .card a {
-      text-decoration: none;
+    section.article {
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 1rem;
+    }
+    section.article:last-child {
+      border-bottom: none;
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+    h2 {
+      font-weight: 700;
+      color: #004D40;
+      margin-bottom: 0.3rem;
+    }
+    p {
+      margin-top: 0;
+      margin-bottom: 0.6rem;
+      line-height: 1.5;
+    }
+    a.read-more {
+      color: #00796B;
       font-weight: 600;
-      color: #00b894;
+      text-decoration: none;
     }
-    .card a:hover {
+    a.read-more:hover {
       text-decoration: underline;
     }
     footer {
@@ -71,12 +79,6 @@
       color: #666;
       font-size: 0.9rem;
       text-align: center;
-    }
-    footer p {
-      margin: 0.5rem 0;
-    }
-    footer p em {
-      font-style: italic;
     }
   </style>
 </head>
@@ -91,24 +93,48 @@
     </nav>
   </header>
   <main>
-    <h1>Latest Articles</h1>
-    <div class="article-grid">
-      <div class="card">
-        <h3><a href="foods-that-boost-testosterone.html">Top 5 Foods That Boost Testosterone</a></h3>
-        <p>Eggs, oysters, garlic, avocado oil, and fish oil — learn how these support hormone production naturally.</p>
-      </div>
-      <div class="card">
-        <h3><a href="fitness-routine-for-men.html">Testosterone-Optimized Fitness Routine</a></h3>
-        <p>Learn how to structure your workouts and daily habits to naturally boost testosterone and energy.</p>
-      </div>
-      <div class="card">
-        <h3><a href="testosterone-guide.html">Complete Beginner's Guide to Testosterone</a></h3>
-        <p>Everything you need to know: symptoms of low T, natural solutions, and when to consider TRT.</p>
-      </div>
-    </div>
+    <h1>Articles</h1>
+
+    <section class="article">
+      <h2>Fitness Routine for Men</h2>
+      <p>A comprehensive guide to building muscle and increasing testosterone naturally through a structured workout plan. Learn about exercises, muscle groups, and recovery.</p>
+      <a href="fitness-routine-for-men.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <section class="article">
+      <h2>Top 5 Foods That Boost Testosterone</h2>
+      <p>Discover nutrient-dense foods that naturally support testosterone production, backed by science and easy to incorporate into your diet.</p>
+      <a href="foods-that-boost-testosterone.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <section class="article">
+      <h2>Testosterone Guide</h2>
+      <p>An in-depth guide covering testosterone basics, its role in the body, how to support healthy levels, and the science behind supplementation.</p>
+      <a href="testosterone-guide.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <!-- New articles added below -->
+
+    <section class="article">
+      <h2>Supplement Guides</h2>
+      <p>Detailed articles focusing on key testosterone-supporting supplements like Vitamin D, Zinc, Omega-3s, and Garlic Extract. Learn about their benefits, proper dosage, safety, and how to choose quality products.</p>
+      <a href="supplement-guides.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <section class="article">
+      <h2>Lifestyle & Hormone Health</h2>
+      <p>Explore how sleep optimization, stress management, and daily habits affect testosterone levels. Discover lifestyle changes that support hormone balance and practical tips for healthier living.</p>
+      <a href="lifestyle-hormone-health.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <section class="article">
+      <h2>Common Myths & FAQs about Testosterone</h2>
+      <p>Addressing widespread misconceptions about testosterone, supplements, and fitness routines to help you separate fact from fiction and make informed decisions.</p>
+      <a href="testosterone-myths-faqs.html" class="read-more">Read more &raquo;</a>
+    </section>
+
   </main>
   <footer>
-    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
