--- a/lifestyle-hormone-health.html
+++ b/lifestyle-hormone-health.html
@@ -11,7 +11,6 @@
       margin: 0;
       background-color: #f4f4f4;
       color: #333;
-      line-height: 1.6;
     }
     header {
       background-color: #111;
@@ -30,7 +29,7 @@
     }
     main {
       max-width: 800px;
-      margin: 2rem auto;
+      margin: auto;
       padding: 2rem;
       background: white;
       border-radius: 10px;
@@ -40,18 +39,22 @@
       margin-top: 0;
       font-weight: 800;
       font-size: 2rem;
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #00b894;
     }
     h2 {
-      color: #09814a;
       margin-top: 2rem;
-      font-weight: 700;
     }
-    p {
-      margin-bottom: 1rem;
-      font-size: 1rem;
+    a.btn {
+      display: inline-block;
+      background-color: #00b894;
+      color: white;
+      padding: 10px 15px;
+      margin-top: 10px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    a.btn:hover {
+      background-color: #019875;
     }
     footer {
       margin-top: 3rem;
@@ -61,12 +64,6 @@
       color: #666;
       font-size: 0.9rem;
       text-align: center;
-    }
-    footer p {
-      margin: 0.5rem 0;
-    }
-    footer p em {
-      font-style: italic;
     }
   </style>
 </head>
@@ -84,21 +81,35 @@
   <main>
     <h1>Lifestyle & Hormone Health</h1>
 
+    <p>Hormone levels — especially testosterone — are highly influenced by lifestyle choices. While food and supplements are important, how you sleep, manage stress, and structure your day plays a massive role in maintaining optimal levels. Let’s dive into some of the most important habits and how to apply them.</p>
+
     <h2>Sleep Optimization</h2>
-    <p>Quality sleep is one of the most important yet often overlooked factors for maintaining healthy testosterone levels. Testosterone production peaks during deep REM sleep cycles, making it critical to get at least 7-9 hours of uninterrupted rest each night. Poor sleep or sleep disorders like sleep apnea can cause hormone imbalances, leading to reduced testosterone, fatigue, and decreased muscle recovery. Creating a consistent sleep routine, limiting screen time before bed, and optimizing your bedroom environment for darkness and quiet can dramatically improve your hormone health and overall well-being.</p>
+    <p>Getting 7–9 hours of quality sleep every night is non-negotiable for hormone health. Sleep is when your body releases the majority of its testosterone. Skipping rest, having irregular sleep cycles, or staying up too late all suppress testosterone production. Try using blackout curtains, limiting blue light before bed, and going to bed and waking up at the same time each day.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B08CGYFB2Q?tag=testofit-20" target="_blank">Buy Sleep Aid on Amazon</a>
 
-    <h2>Stress Management</h2>
-    <p>Chronic stress elevates cortisol, a hormone that directly inhibits testosterone production and negatively impacts libido, energy, and muscle mass. Managing stress through mindfulness techniques such as meditation, deep breathing, yoga, or regular physical activity can help keep cortisol levels in check. It's also important to balance work and leisure, set realistic goals, and seek support when needed. Taking control of your mental health is a key step toward maintaining optimal testosterone and improving your quality of life.</p>
+    <h2>Track Your Health</h2>
+    <p>It’s hard to improve what you don’t track. Monitoring your weight, sleep, and other vital signs can give you insight into your overall health, fitness progress, and testosterone-boosting efforts. Smart scales can track trends in weight, body fat, and even muscle mass.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B095YJW56C?tag=testofit-20" target="_blank">Buy Smart Scale on Amazon</a>
 
-    <h2>Lifestyle Habits to Avoid</h2>
-    <p>Certain lifestyle habits can significantly lower testosterone. Excessive alcohol consumption disrupts hormone balance and can damage testosterone-producing cells. Poor diet choices, including high sugar intake and processed foods, can lead to inflammation and fat gain, both linked to lower testosterone. Smoking and recreational drugs also negatively impact hormone levels and cardiovascular health. Prioritizing whole foods, moderating alcohol, quitting smoking, and avoiding harmful substances can support your body's natural hormone production.</p>
+    <h2>Stay Hydrated and Fuel Wisely</h2>
+    <p>Proper hydration and protein intake are vital for healthy hormones and muscle recovery. Shaker bottles make it easy to stay on top of your hydration and protein goals whether you're at home, work, or the gym. Keep a few clean ones on rotation for convenience.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0CXPWMSX6?tag=testofit-20" target="_blank">Buy Shaker Bottles on Amazon</a>
 
-    <h2>Practical Daily Tips</h2>
-    <p>Incorporating simple daily habits can boost hormone health over time. Regular strength training stimulates testosterone release and muscle growth. Staying hydrated and maintaining a healthy weight optimize hormone function. Ensure your diet includes adequate protein, healthy fats, and micronutrients like zinc and magnesium. Limit exposure to endocrine disruptors found in plastics and certain chemicals. Lastly, foster strong social connections and engage in activities that bring joy and purpose, as mental health is tightly linked to hormone balance.</p>
+    <h2>Supplement Smart with Creatine</h2>
+    <p>Creatine is one of the most researched and effective supplements available. It helps improve strength, endurance, muscle size, and overall energy. While it doesn’t directly raise testosterone, it enhances performance and recovery — which supports a testosterone-friendly lifestyle.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0D4PFH1GY?tag=testofit-20" target="_blank">Buy Creatine Monohydrate on Amazon</a>
+
+    <h2>Limit Alcohol and Junk Food</h2>
+    <p>Alcohol, processed food, and sugar all wreak havoc on your endocrine system. They can lead to increased estrogen levels, weight gain, and liver dysfunction, which negatively affects testosterone. Swap them for whole foods, filtered water, and nutrient-rich snacks like nuts, fruit, or yogurt.</p>
+
+    <h2>Manage Stress Daily</h2>
+    <p>Chronic stress increases cortisol — the stress hormone that directly suppresses testosterone. Managing your stress through deep breathing, meditation, daily exercise, or journaling helps keep cortisol in check and your hormones optimized.</p>
+
+    <p><strong>Reminder:</strong> Hormone health is about consistency, not perfection. Start implementing one habit at a time and build from there.</p>
   </main>
 
   <footer>
-    <p><em>Disclosure: This site may earn commissions from affiliate links.</em></p>
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
