--- a/testosterone-myths-faqs.html
+++ b/testosterone-myths-faqs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Common Myths & FAQs About Testosterone | TestoFit</title>
+  <title>Testosterone Myths & FAQs | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -41,7 +41,16 @@
       font-size: 2rem;
     }
     h2 {
-      margin-top: 2rem;
+      font-size: 1.4rem;
+      margin-top: 1.5rem;
+    }
+    a.inline-link {
+      color: #00b894;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a.inline-link:hover {
+      text-decoration: underline;
     }
     footer {
       margin-top: 3rem;
@@ -51,6 +60,12 @@
       color: #666;
       font-size: 0.9rem;
       text-align: center;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+    footer p em {
+      font-style: italic;
     }
   </style>
 </head>
@@ -64,37 +79,34 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
   <main>
     <h1>Common Myths & FAQs About Testosterone</h1>
-    <p>Testosterone is a critical hormone in both men and women, but there’s a lot of misinformation surrounding it. This page clears up common myths and answers the most frequently asked questions to help you make informed decisions.</p>
 
-    <h2>Myth 1: More Testosterone Always Means More Muscle</h2>
-    <p>While testosterone supports muscle growth, more isn’t always better. There's a natural limit to how much muscle your body can build — and past a certain point, excess testosterone can lead to negative side effects. Focus on optimizing healthy levels, not chasing extreme doses.</p>
+    <p>Testosterone is one of the most misunderstood hormones. Whether you're trying to optimize it naturally or are curious about hormone health, there's a lot of misinformation out there. Let's bust some myths and answer some of the most frequently asked questions.</p>
 
-    <h2>Myth 2: Only Older Men Need to Worry About Low T</h2>
-    <p>Although testosterone naturally declines with age, many younger men experience low levels due to poor sleep, chronic stress, excessive alcohol, poor diet, or lack of exercise. Hormone health should be a priority at every age.</p>
+    <h2>Myth 1: Testosterone is only about sex drive and muscle</h2>
+    <p>While testosterone does affect libido and muscle growth, it also plays major roles in mood regulation, red blood cell production, cognitive function, and fat distribution. <a href="testosterone-guide.html" class="inline-link">Read our full guide to testosterone</a> to understand its broader impact.</p>
 
-    <h2>Myth 3: Supplements Are a Waste of Money</h2>
-    <p>There are definitely ineffective products out there — but some supplements are backed by real science. For example, zinc, vitamin D, and omega-3s all support hormone production when used correctly. You just need to choose the right ones and use them consistently.</p>
+    <h2>Myth 2: Supplements are useless for testosterone</h2>
+    <p>Many supplements marketed as "testosterone boosters" are overhyped, but that doesn’t mean all supplements are useless. <a href="supplement-vitamin-d.html" class="inline-link">Vitamin D</a>, <a href="supplement-zinc.html" class="inline-link">zinc</a>, <a href="supplement-omega-3.html" class="inline-link">omega-3s</a>, and others have solid science behind them for supporting testosterone. Check out our <a href="articles.html" class="inline-link">supplement guides</a> to learn more.</p>
 
-    <h2>Myth 4: Testosterone Boosters Are Dangerous</h2>
-    <p>Natural testosterone boosters that use vitamins, minerals, and adaptogens are generally safe when used properly. Problems arise when people use unregulated compounds or abuse synthetic hormones. Always choose trusted, proven supplements — and when in doubt, consult a doctor.</p>
+    <h2>Myth 3: High testosterone makes you aggressive</h2>
+    <p>This myth has been exaggerated. While testosterone may increase confidence and competitiveness, it does not inherently cause aggression. In fact, low testosterone can be linked to irritability and depression. It's all about hormonal balance.</p>
 
-    <h2>FAQ: What’s a Normal Testosterone Level?</h2>
-    <p>For men, normal total testosterone levels typically fall between 300–1,000 ng/dL. For women, it's 15–70 ng/dL. However, symptoms matter more than numbers — always interpret lab results alongside how you feel and perform.</p>
+    <h2>FAQ: What’s the best way to naturally increase testosterone?</h2>
+    <p>Start with lifestyle: focus on strength training, <a href="fitness-routine-for-men.html" class="inline-link">consistent exercise routines</a>, better sleep, and stress management. <a href="lifestyle-hormone-health.html" class="inline-link">Learn how your lifestyle affects your hormones</a>.</p>
 
-    <h2>FAQ: Do I Need a Blood Test?</h2>
-    <p>Yes. A blood test is the only way to confirm your testosterone levels and check for imbalances. It’s smart to get tested if you're experiencing fatigue, low libido, mood swings, or muscle loss. Many clinics and home labs now offer affordable options.</p>
+    <h2>FAQ: How do I know if my testosterone is low?</h2>
+    <p>Common signs include low libido, fatigue, depression, reduced muscle mass, and trouble focusing. If you suspect low testosterone, consult with a medical professional and request a blood test for confirmation.</p>
 
-    <h2>FAQ: Can Lifestyle Really Boost Testosterone?</h2>
-    <p>Absolutely. Regular resistance training, quality sleep, nutrient-rich foods, stress management, and proper supplementation can significantly improve testosterone levels — even without medical treatment.</p>
+    <h2>FAQ: Is TRT (testosterone replacement therapy) safe?</h2>
+    <p>When medically prescribed and monitored, TRT can be safe and effective. However, it's not the first line of defense for everyone. Many people see results with lifestyle and supplement changes before ever needing TRT.</p>
 
-    <p><strong>Bottom Line:</strong> Don’t believe everything you read online. Stick to science-backed information, monitor your body, and take a well-rounded approach to hormone health.</p>
+    <p>Still have questions? Feel free to <a href="contact.html" class="inline-link">contact us</a> or browse more of our <a href="articles.html" class="inline-link">expert articles</a> to dive deeper into testosterone and men's health.</p>
   </main>
 
   <footer>
-    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
+    <p><em>Disclosure: Some links may be affiliate links. We may earn a small commission at no cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
