--- a/articles.html
+++ b/articles.html
@@ -113,8 +113,6 @@
       <a href="testosterone-guide.html" class="read-more">Read more &raquo;</a>
     </section>
 
-    <!-- New articles added below -->
-
     <section class="article">
       <h2>Supplement Guides</h2>
       <p>Detailed articles focusing on key testosterone-supporting supplements like Vitamin D, Zinc, Omega-3s, and Garlic Extract. Learn about their benefits, proper dosage, safety, and how to choose quality products.</p>
@@ -131,6 +129,12 @@
       <h2>Common Myths & FAQs about Testosterone</h2>
       <p>Addressing widespread misconceptions about testosterone, supplements, and fitness routines to help you separate fact from fiction and make informed decisions.</p>
       <a href="testosterone-myths-faqs.html" class="read-more">Read more &raquo;</a>
+    </section>
+
+    <section class="article">
+      <h2>Testosterone Booster Side Effects and What You Should Know</h2>
+      <p>Learn about the common side effects of testosterone boosters, who is at risk, tips for safe use, and when to stop taking them for your health and safety.</p>
+      <a href="testosterone-booster-side-effects.html" class="read-more">Read more &raquo;</a>
     </section>
 
   </main>
