--- a/testosterone-booster-side-effects.html
+++ b/testosterone-booster-side-effects.html
@@ -4,91 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Testosterone Booster Side Effects and What You Should Know | TestoFit</title>
-  <meta name="description" content="Learn about the potential side effects of testosterone boosters, how to use them safely, and what to watch out for to protect your health." />
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px auto;
-      max-width: 700px;
-      color: #222;
-      background: #fff;
+      font-family: 'Outfit', sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #333;
     }
-    h1, h2, h3 {
-      color: #2a5d84;
+    header {
+      background-color: #111;
+      color: white;
+      padding: 1rem;
+      text-align: center;
     }
-    a {
-      color: #1a73e8;
+    nav a {
+      color: white;
+      margin: 0 15px;
       text-decoration: none;
+      font-weight: 600;
     }
-    a:hover {
+    nav a:hover {
       text-decoration: underline;
     }
-    .content-section {
-      margin-bottom: 2rem;
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
-    ul {
-      padding-left: 20px;
+    h1 {
+      margin-top: 0;
+      font-weight: 800;
+      font-size: 2rem;
     }
-    .affiliate-link {
+    h2 {
+      margin-top: 2rem;
+    }
+    p {
+      line-height: 1.6;
+    }
+    a.btn {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 10px 15px;
-      background-color: #2a5d84;
+      background-color: #00b894;
       color: white;
-      border-radius: 4px;
+      padding: 10px 15px;
+      margin-top: 10px;
       text-decoration: none;
+      border-radius: 5px;
       font-weight: bold;
+      transition: background-color 0.3s ease;
     }
-    .affiliate-link:hover {
-      background-color: #1a3b58;
+    a.btn:hover {
+      background-color: #019875;
+    }
+    footer {
+      margin-top: 3rem;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <article>
+  <header>
+    <h1>TestoFit</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
     <h1>Testosterone Booster Side Effects and What You Should Know</h1>
 
-    <p>Testosterone boosters are becoming increasingly popular as men seek natural ways to enhance their energy, muscle mass, and overall vitality. While many users experience positive benefits, it is crucial to be aware of the possible side effects that can arise from using these supplements. Understanding the risks and how to minimize them is key to using testosterone boosters safely and effectively.</p>
+    <p>Testosterone boosters often contain herbal extracts, vitamins, and minerals aimed at naturally increasing testosterone levels. While many experience benefits, some users report side effects that it’s important to understand before starting supplementation.</p>
 
-    <section class="content-section">
-      <h2>Common Side Effects of Testosterone Boosters</h2>
-      <p>Testosterone boosters typically contain a mix of herbal extracts, vitamins, and minerals designed to increase your body’s natural testosterone production. However, these ingredients can sometimes cause unwanted effects. The most frequently reported side effects include acne and oily skin, which happen because testosterone stimulates oil glands. Hair loss can also be an issue, especially for men genetically predisposed to male pattern baldness, as increased testosterone may convert to dihydrotestosterone (DHT), which affects hair follicles. Additionally, some users report mood swings, irritability, and sleep disturbances such as insomnia. Less common effects include gynecomastia (swelling of breast tissue) and digestive discomfort like nausea or upset stomach.</p>
-    </section>
+    <h2>Common Side Effects</h2>
+    <p>Users may experience acne, oily skin, or hair loss due to hormone fluctuations caused by boosters. Mood changes such as irritability or sleep disturbances like insomnia have also been reported. Less frequently, digestive upset or breast tissue swelling (gynecomastia) can occur. These effects vary based on individual sensitivity and the supplement’s ingredients.</p>
 
-    <section class="content-section">
-      <h2>Who Is at Risk?</h2>
-      <p>While many men use testosterone boosters without major problems, certain individuals should exercise greater caution. Men with existing heart conditions or high blood pressure are at increased risk for complications. Similarly, those with prostate health concerns or a family history of prostate cancer should consult a healthcare professional before use. Individuals with liver or kidney issues may also face higher risks, as these organs help process supplement ingredients. Furthermore, anyone already on hormone therapy or medications that affect hormone levels should avoid testosterone boosters unless supervised by a doctor. Understanding your personal health risks helps ensure safer use of these products.</p>
-    </section>
+    <h2>Who Should Be Careful?</h2>
+    <p>Men with heart conditions, high blood pressure, prostate issues, or liver/kidney concerns should consult a healthcare professional before use. Also, those on hormone therapies or medications affecting hormones should avoid boosters unless supervised by a doctor.</p>
 
-    <section class="content-section">
-      <h2>Tips for Using Testosterone Boosters Safely</h2>
-      <p>To minimize potential side effects, it is essential to follow safe usage guidelines. First and foremost, always consult your healthcare provider before starting a testosterone booster, especially if you have any medical conditions or take other medications. Stick strictly to the recommended dosage on the product label and avoid taking extra pills to speed up results. Choose supplements made with high-quality, clinically researched ingredients from reputable brands. Pay close attention to how your body responds after beginning supplementation—monitor for any new symptoms or changes in mood or physical health. Regular checkups and hormone level testing can provide important feedback and keep your regimen on track.</p>
-    </section>
+    <h2>Safe Usage Tips</h2>
+    <p>Always follow dosage instructions and choose high-quality supplements from reputable brands. Monitor your body’s reactions and stop use if you experience severe side effects. Regular medical checkups and hormone level tests help ensure safe supplementation.</p>
 
-    <section class="content-section">
-      <h2>When to Stop Using Testosterone Boosters</h2>
-      <p>Knowing when to discontinue use is just as important as knowing how to start. You should immediately stop taking testosterone boosters and seek medical advice if you experience severe acne or skin infections, which may indicate an adverse reaction. Unexplained chest pain or difficulty breathing requires urgent attention and could signal cardiovascular stress. If you notice swelling or tenderness in your breast tissue, this could be gynecomastia and warrants stopping the supplement. Severe mood changes such as depression or aggression are serious signs that the hormonal balance is off. Persistent digestive issues like nausea or stomach pain also indicate you should stop and consult your doctor.</p>
-    </section>
+    <h2>When to Stop</h2>
+    <p>Discontinue use immediately and seek medical advice if you notice severe acne, chest pain, breast swelling, mood swings, or persistent digestive issues. Safety first is key for maintaining health while using testosterone boosters.</p>
 
-    <section class="content-section">
-      <h2>Recommended Testosterone Boosters with Fewer Side Effects</h2>
-      <p>To reduce the risk of side effects, many users prefer testosterone boosters that rely on natural ingredients with strong safety profiles. TestoFit is a popular option designed with clinically researched components to support your body’s natural testosterone production without harsh chemicals. Other well-regarded supplements include Prime Male, which emphasizes ingredients like D-aspartic acid and zinc for hormone balance, and TestoGen, which combines herbal extracts and vitamins to promote overall male vitality. Choosing supplements from trusted brands and reading customer reviews can help you find a product that fits your needs.</p>
-      <a
-        href="https://www.amazon.com/Nutricost-Creatine-Monohydrate-Micronized-Powder/dp/B01EVVQX9U/ref=pd_hp_d_btf_rpt_sd_biaws_c_5?_encoding=UTF8&dd=04JsTgh5TPwI64HfYcgsJdNGzeC2M1AGI-JCm90QnS4%2C&ddc_refnmnt=free&pd_rd_i=B01EVVQX9U&pd_rd_w=9JQ8e&content-id=amzn1.sym.b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_p=b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_r=02G446REBQFNDHF1C5RP&pd_rd_wg=s3DqQ&pd_rd_r=0e611672-412e-4f99-aca3-62af66bd5895&th=1&tag=TestoFit-20"
-        target="_blank"
-        rel="nofollow noopener noreferrer"
-        class="affiliate-link"
-        >Shop TestoFit on Amazon</a
-      >
-    </section>
+    <h2>Recommended Testosterone Booster</h2>
+    <p>For a trusted option with fewer side effects, TestoFit is formulated with clinically researched natural ingredients to support healthy testosterone production safely.</p>
+    <a href="https://www.amazon.com/Nutricost-Creatine-Monohydrate-Micronized-Powder/dp/B01EVVQX9U/ref=pd_hp_d_btf_rpt_sd_biaws_c_5?_encoding=UTF8&dd=04JsTgh5TPwI64HfYcgsJdNGzeC2M1AGI-JCm90QnS4%2C&ddc_refnmnt=free&pd_rd_i=B01EVVQX9U&pd_rd_w=9JQ8e&content-id=amzn1.sym.b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_p=b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_r=02G446REBQFNDHF1C5RP&pd_rd_wg=s3DqQ&pd_rd_r=0e611672-412e-4f99-aca3-62af66bd5895&th=1&tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
+      Shop TestoFit on Amazon
+    </a>
 
-    <footer style="margin-top: 3rem; font-size: 0.9rem; color: #555;">
-      <p>
-        Disclaimer: This article is for informational purposes only and does not substitute professional medical advice. Always consult your healthcare provider before starting any new supplement.
-      </p>
-    </footer>
-  </article>
+  </main>
+
+  <footer>
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
+  </footer>
 </body>
 </html>
