--- a/testosterone-booster-side-effects.html
+++ b/testosterone-booster-side-effects.html
@@ -102,7 +102,7 @@
     <h2>Recommended Testosterone Booster</h2>
     <p>For a trusted option with fewer side effects, TestoFit is formulated with clinically researched natural ingredients to support healthy testosterone production safely.</p>
     <a href="https://www.amazon.com/Nutricost-Creatine-Monohydrate-Micronized-Powder/dp/B01EVVQX9U/ref=pd_hp_d_btf_rpt_sd_biaws_c_5?_encoding=UTF8&dd=04JsTgh5TPwI64HfYcgsJdNGzeC2M1AGI-JCm90QnS4%2C&ddc_refnmnt=free&pd_rd_i=B01EVVQX9U&pd_rd_w=9JQ8e&content-id=amzn1.sym.b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_p=b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_r=02G446REBQFNDHF1C5RP&pd_rd_wg=s3DqQ&pd_rd_r=0e611672-412e-4f99-aca3-62af66bd5895&th=1&tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
-      Shop TestoFit on Amazon
+      Shop Creatine
     </a>
 
   </main>
