--- a/testosterone-booster-side-effects.html
+++ b/testosterone-booster-side-effects.html
@@ -51,7 +51,7 @@
       background-color: #00b894;
       color: white;
       padding: 10px 15px;
-      margin-top: 10px;
+      margin: 10px 10px 0 0;
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
@@ -99,10 +99,17 @@
     <h2>When to Stop</h2>
     <p>Discontinue use immediately and seek medical advice if you notice severe acne, chest pain, breast swelling, mood swings, or persistent digestive issues. Safety first is key for maintaining health while using testosterone boosters.</p>
 
-    <h2>Recommended Testosterone Booster</h2>
-    <p>For a trusted option with fewer side effects, TestoFit is formulated with clinically researched natural ingredients to support healthy testosterone production safely.</p>
-    <a href="https://www.amazon.com/Nutricost-Creatine-Monohydrate-Micronized-Powder/dp/B01EVVQX9U/ref=pd_hp_d_btf_rpt_sd_biaws_c_5?_encoding=UTF8&dd=04JsTgh5TPwI64HfYcgsJdNGzeC2M1AGI-JCm90QnS4%2C&ddc_refnmnt=free&pd_rd_i=B01EVVQX9U&pd_rd_w=9JQ8e&content-id=amzn1.sym.b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_p=b8fbc812-bed0-4266-bf60-df0c3c067ef0&pf_rd_r=02G446REBQFNDHF1C5RP&pd_rd_wg=s3DqQ&pd_rd_r=0e611672-412e-4f99-aca3-62af66bd5895&th=1&tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
-      Shop Creatine
+    <h2>Recommended Supplements</h2>
+    <p>Here are some highly rated supplements that support testosterone and overall male health, formulated by Nutricost and available on Amazon:</p>
+
+    <a href="https://www.amazon.com/dp/B01N0ESJQ8?tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
+      Nutricost Testosterone Complex Capsules
+    </a>
+    <a href="https://www.amazon.com/dp/B09B4DWNYQ?tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
+      Nutricost Nitric Oxide Booster Capsules
+    </a>
+    <a href="https://www.amazon.com/dp/B08H2HY9Z3?tag=TestoFit-20" target="_blank" rel="nofollow noopener noreferrer" class="btn">
+      Nutricost DHEA 50mg Capsules
     </a>
 
   </main>
