--- a/articles.html
+++ b/articles.html
@@ -137,6 +137,12 @@
       <a href="testosterone-booster-side-effects.html" class="read-more">Read more &raquo;</a>
     </section>
 
+    <section class="article">
+  <h2>How Blue Light at Night Affects Your Testosterone Production</h2>
+  <p>Exposure to blue light at night — from screens, LEDs, and smartphones — can disrupt your natural circadian rhythm. This interference lowers melatonin production, which indirectly suppresses testosterone synthesis during sleep. Poor sleep quality leads to lower testosterone levels and affects muscle recovery, mood, and overall energy. Minimizing blue light exposure before bed by using apps, night modes, or blue light blocking glasses can protect your hormone health and help maintain optimal testosterone levels.</p>
+  <a href="blue-light-testosterone.html" class="read-more">Read more &raquo;</a>
+    </section>
+
   </main>
   <footer>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
